--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -75,7 +75,7 @@ h4 {
 }
 
 p {
-  margin: 0 0 $small-spacing;
+  margin: 0 0 $small-spacing 0;
 }
 
 a {
